# simplecq

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README_ja.md  README_ko.md  README_zh.md  engine.ini  readme.md  vcpkg.json
.github/workflows/: compile.yml
agent/: README.md  __init__.py  agent_config.yaml  assistant.py  cli.py  config.py  error_analyzer.py  llm_client.py  project_context.py  requirements.txt
agent/checkers/: __init__.py  assemble.py  common.py  scene.py
config/: CarPhyModel.exp  CarPhyModel.lib  agent.xml  assemble.yml  assembled_car.xml  attack_rule.xml  car.xml  carbattle.yml  cq_interpreter.exp  cq_interpreter.lib  description_agent.xml  description_blueagent.xml  description_bluecar.xml  description_car.xml  description_redagent.xml  description_redcar.xml  model_assemble.yml  navigation.yml  profile_recorded.txt  rule.xml  rule_attackside.xml  rule_attackside_error.xml  rule_attackside_trained.xml  rule_singlecar.xml  rule_singlecar_defend.xml  scene_carbattle.yml  scene_planebattle2v2_self_learning.yml  simple.json  temp.json
config/cars/: car_btr.xml
config/unused/: __rule_defendside.xml  rule_singlecar.xml
doc/: README_Detailed.md  SimpleCQ .md
include/: config.hpp  datatransform.hpp  dllop.hpp  dowithcatch.hpp  mysock.hpp  parseany.hpp  printcsvaluemap.hpp  profile.hpp  stringprocess.hpp  thread_pool.hpp  tinyffi.hpp
include/engine/: callback.hpp  console.hpp  executionengine.hpp  modelmanager.hpp
include/taskflow/: LICENSE
scripts/: Train2v2_self_learning.ipynb  Train_Multiprocess.ipynb  Train_vecenv.ipynb
src/: CMakeLists.txt  agent.cpp  anyprocess.hpp  cq_agent.proto  csmodel_base.h  datatransform.hpp  dllop.cpp  gym_interface.py  main.cpp  model.cpp  mysock.hpp  parseany.hpp  printcsvaluemap.hpp  stringprocess.hpp  taskgraph.hpp  test.cpp  thread_pool.hpp  tinycq.cpp  view.hpp
src/agentrpc/: CMakeLists.txt  cq_agent.proto
src/destributed/: anyserialize.cpp  anyserialize.hpp
src/engine/: callback.hpp  console.cpp  console.hpp  coroutined.hpp  executionengine.hpp  modelmanager.hpp
src/tools/: overloaded.hpp
train/: header.py  subruleset0.py  subruleset1.py  test.ipynb
